
                             Kiji Express Release Notes

Version 0.12.0
  * EXP-279. Change paging options to use PagingSpec.

Version 0.10.0
  * EXP-129. Add evaluation phase to model environment.
  * EXP-128. Add evaluation phase to model definition.
  * EXP-153. Support joining pipes on entity_ids and add a factory method
      to create a hashed entityId.
  * EXP-220. Finalize KijiOutput API for 1.0 release.
  * EXP-185. Extractor in ScoreProducer is now optional.
  * EXP-219. Finalize KijiInput API for 1.0 release.
  * EXP-223. Make constructors for generic AvroValues public.
  * EXP-197. Adds support for sequence file based flow sources.
  * EXP-207. EntityIds can now be accessed from extractors/scorers.
  * EXP-52. Adds support for text file based key-value stores.

Version 0.9.0
  * EXP-105. When writing to a Kiji table using layout < v1.3,
      KijiExpress uses the default reader schema for writing generic
      values to the table.  The user can also specify a writer schema
      using Column("family:qualifier").withSchemaId(12). This schema
      ID can be retrieved from the kiji schema table. See
      WriterSchemaSuite for an example.
  * EXP-105. The DSL syntax for KijiOutput has changed from
      KijiOutput(Map(Column("family:qualifier") -> 'fieldname)) to
      KijiOutput(Map('fieldname -> Column("family:qualifier"))) in
      order to match the syntax for KijiOutput('fieldname -> "fam:qual")

Version 0.8.1
  * EXP-186. Update Scalding version used by KijiExpress. This fixes
      some Scalding bugs in the matrix API.

Version 0.8.0
  * EXP-168. Normalizes the names of modeling Avro classes. The names
      of Avro records for columns and filters have been changed from
      '*Spec' style to 'Avro*' to match other classes and distinguish
      from records like 'AvroInputSpec' (which legitimately should
      end in 'Spec').
  * EXP-160. Extractors can now be configured on the appropriate
      lifecycle phases.